--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   flutter_typeahead: ^4.0.0
   loading_animation_widget: ^1.2.0+2
   syncfusion_flutter_charts: ^20.2.44
+  charts_flutter: ^0.12.0
+  fl_chart: ^0.55.1
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
