--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^105.0.0",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
+    "newsapi": "^2.4.1",
     "node-fetch": "^3.2.6",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
