added aws comprehend

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "shrey1098",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-comprehend": "^3.165.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
