--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   charts_flutter: ^0.12.0
   fl_chart: ^0.55.1
   persistent_bottom_nav_bar: ^4.0.2
+  video_player: ^2.4.7
 
 dev_dependencies:
   flutter_test:
