--- a/epiquity_stock_api/requirements.txt
+++ b/epiquity_stock_api/requirements.txt
@@ -1,27 +1,40 @@
 anyio==3.6.1
 appdirs==1.4.4
+astroid==2.12.9
 beautifulsoup4==4.11.1
 bs4==0.0.1
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
+cryptography==39.0.0
 cssselect==1.1.0
+dill==0.3.5.1
 fake-useragent==0.1.11
 fastapi==0.78.0
+frozendict==2.3.4
 h11==0.13.0
+html5lib==1.1
 idna==3.3
 importlib-metadata==4.12.0
+isort==5.10.1
+lazy-object-proxy==1.7.1
 lxml==4.9.1
+mccabe==0.7.0
+multitasking==0.0.11
 numpy==1.23.0
 pandas==1.4.3
 pandas-datareader==0.10.0
 parse==1.19.0
+platformdirs==2.5.2
+pycparser==2.21
 pydantic==1.9.1
 pyee==8.2.2
+pylint==2.15.2
 pyppeteer==1.0.2
 pyquery==1.4.3
 python-dateutil==2.8.2
-pytz==2022.1
+pytz==2022.7.1
 requests==2.28.1
 requests-html==0.10.0
 six==1.16.0
@@ -29,10 +42,15 @@ sniffio==1.2.0
 soupsieve==2.3.2.post1
 starlette==0.19.1
 ta==0.10.1
+tomli==2.0.1
+tomlkit==0.11.4
 tqdm==4.64.0
 typing_extensions==4.3.0
 urllib3==1.26.9
 uvicorn==0.18.2
 w3lib==1.22.0
+webencodings==0.5.1
 websockets==10.3
+wrapt==1.14.1
+yfinance==0.2.4
 zipp==3.8.0
